[package]
name = "ehdb-rs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
base64 = "0.22"
bytes = "1.10"
fallible-iterator = "0.2"
getrandom = "0.3"
hmac = "0.12"
postgres-protocol = { version = "0.6.10", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
stringprep = "0.1"
url = "2.5"
