[package]
name = "ehdl-rs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.5"
rustls = { version = "0.23", default-features = false, features = ["std", "ring", "tls12"] }
webpki-roots = "0.26"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasmedge_wasi_socket = "0.5.5"
