[package]
name = "jmcomiclogin-rs"
version = "0.2.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
md-5 = "0.10"
digest = "0.10"
aes = "0.8"
cipher = "0.4"
base64 = "0.22"
rustls = { version = "0.23", default-features = false, features = ["std", "ring", "tls12"] }
webpki-roots = "1.0"
url = "2.5"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasmedge_wasi_socket = "0.5.5"
