[package]
name = "nhlogin-rs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rustls = { version = "0.23", default-features = false, features = ["std", "ring", "tls12"] }
webpki-roots = "0.26"

[target.'cfg(all(target_arch = "wasm32", target_os = "wasi"))'.dependencies]
wasmedge_wasi_socket = "0.5.5"
